# verifier-py

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  pyproject.toml  rewrite-authors-to-spl.sh
docs/: README.md
src/verifier/: __init__.py  cli.py
src/verifier/commands/: __init__.py  doctor.py  init.py  run.py  token_usage.py
tests/unit/: test_cli.py
