[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verifier"
version = "0.1.0"
description = "Python port of verifier CLI"
authors = [{name = "AutoDevOps"}]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
verifier = "verifier.cli:run_app"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
